[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Lift.gd" type="Script" id=1]
[ext_resource path="res://scenes/platforms/Lever.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/platforms/BlockMoving.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Titillium-Regular.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[node name="Lift" type="Spatial"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Lever" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0, 0.4 )
collision_mask = 2

[node name="BlockMoving" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="HUD" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -7.0
margin_right = 48.5
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "Press 'e' to use"

[node name="TimerUp" type="Timer" parent="."]
wait_time = 0.01

[node name="TimerDown" type="Timer" parent="."]
wait_time = 0.01
[connection signal="body_entered" from="Lever" to="." method="_on_Lever_body_entered"]
[connection signal="body_exited" from="Lever" to="." method="_on_Lever_body_exited"]
[connection signal="timeout" from="TimerUp" to="." method="_on_TimerUp_timeout"]
[connection signal="timeout" from="TimerDown" to="." method="_on_TimerDown_timeout"]
